<resources>
    <string name="app_name">EasyAds</string>
    <string name="splash_screen_hello">Welcome to App</string>

    <!--Файл с токеном-->
    <string name="preference_file_key">app_preference_file_key</string>
    <string name="auth_token">auth_token</string>
    <string name="current_user">current_user</string>

    <string name="login_form_login_button_text">Login</string>
    <string name="login_form_registration_button_text">Reginstration</string>

    <string name="login_form_login_edit_text_hint">Email</string>
    <string name="login_form_password_edit_text_hint">Password</string>

    <string name="host">http://89.47.165.45</string>

    <string name="user_registration_progress_dialog_title">Please Wait...</string>
    <string name="user_registration_progress_dialog_message">Trying to register new user</string>
    <string name="user_registration_failed">Sorry, your registration was unsuccessful. Please try it again.</string>

    <string name="login_progress_dialog_title">Please Wait...</string>
    <string name="login_progress_dialog_message">Log in to your account</string>
    <string name="login_failed">An attempt to log in to the account failed.</string>
    <string name="login_user_not_exist">User with such login and password does not exist.</string>

    <string name="update_slots_progress_dialog_title">Please Wait...</string>
    <string name="update_slots_progress_dialog_message">Loading accounts</string>

    <string name="add_new_ad_progress_dialog_title">Please Wait...</string>
    <string name="add_new_ad_progress_dialog_message">Adding a New AD</string>

    <string name="load_ad_list_progress_dialog_title">Please Wait...</string>
    <string name="load_ad_list_progress_dialog_message">Loading Ads</string>

    <string name="accounts_list_default_ad"></string>
    <string name="accounts_list_btn_apply">Bind</string>

    <string name="get_free_account_failed">Failed to get account</string>

    <string name="bonding_progress_dialog_title">Please Wait...</string>
    <string name="bonding_progress_dialog_message">Linking ad to account</string>

    <string name="release_accounts_progress_dialog_title">Please Wait...</string>
    <string name="release_accounts_progress_dialog_message">Release accounts</string>

    <string name="get_categories_json_progress_dialog_title">Please Wait...</string>
    <string name="get_categories_json_progress_dialog_message">Loading categories</string>

    <string name="category_default_list1">Category</string>

    <string name="clear_ad_photo_context_menu_title">Delete</string>

    <string name="delete_ad_list_progress_dialog_title">Please Wait...</string>
    <string name="delete_ad_list_progress_dialog_message">Deleting Ads</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="edit_ads_list_progress_dialog_title">Please Wait...</string>
    <string name="edit_ads_list_progress_dialog_message">Edit Ads</string>

    <string name="edit_ad_progress_dialog_title">Please Wait...</string>
    <string name="edit_ad_progress_dialog_message">Update ad in progress</string>

    <string name="upload_photo_progress_dialog_title">Please Wait...</string>
    <string name="upload_photo_progress_dialog_message">Upload photo in progress</string>

    <string name="btn_add_new_ad_text">Save</string>
    <string name="et_seller_name_hint">Seller</string>
    <string name="et_seller_phone_number_hint">Phone</string>
    <string name="et_seller_city_hint">City</string>
    <string name="et_ad_description_hint">Description</string>
    <string name="et_ad_title_hint">Title</string>

    <string name="delete_photo_progress_dialog_title">Please Wait...</string>
    <string name="delete_photo_progress_dialog_message">Photo deleting in progress</string>

    <string name="update_photo_inf_progress_dialog_title">Please Wait...</string>
    <string name="update_photo_inf_progress_dialog_message">Photo change in progress</string>

    <string name="default_user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:50.0) Gecko/20100101 Firefox/50.0</string>

    <string name="btn_new_ad_text">New</string>
    <string name="btn_delete_account_ad">Delete</string>
    <string name="btn_edit_ad">Edit</string>
    <string name="tv_default_account_name_in_account_list">Default name</string>
    <string name="tv_default_ad_title_in_account_list">___no ad___</string>

    <string name="few_photos_for_new_ad">Few photos for new ad. Need min. 1 photo</string>


    <string name="get_date_on_server_dialog_title">Please Wait...</string>
    <string name="get_date_on_server_dialog_message">Loading in progress</string>

    <string name="chat_new_message_hint">Message text...</string>
    <string name="add_new_chat_message_btn_text">Send</string>

    <string name="create_new_chat_message_dialog_title">Please Wait...</string>
    <string name="create_new_chat_message_dialog_message">Posting a new message</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- 1c = 1000 -->
    <string name="default_delay_service">3600</string>
    <string name="sp_default_check_service_interval">check_service_interval</string>

</resources>
